--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -79,7 +79,7 @@ header {
 .cell {
     height: 16px;
     width: 16px;
-    border: 1px solid #111;
+    /* border: 1px solid #111; */
     background-color: #333;
     display: flex;
     justify-content: center;
