--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,3 @@
-
 * {
     margin: 0;
     padding: 0;
@@ -12,7 +11,7 @@ body {
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    background-color: #111; 
+    background-color: #111;
     color: #ffffff;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
@@ -28,7 +27,7 @@ header {
     font-size: 15px;
     font-weight: bold;
     text-shadow: 1px 1px 2px #000;
-    box-shadow: 0 4px 10px rgba(0,0,0,0.5);
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
 }
 
 
@@ -43,7 +42,7 @@ header {
     justify-content: space-evenly;
     align-items: center;
     background-color: #1a1a1a;
-    box-shadow: 0 8px 20px rgba(0,0,0,0.7);
+    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.7);
 }
 
 
@@ -58,7 +57,7 @@ header {
     justify-content: center;
     align-items: center;
     background-color: #222;
-    
+
 }
 
 .fog {
@@ -79,12 +78,11 @@ header {
 .cell {
     height: 16px;
     width: 16px;
-    /* border: 1px solid #111; */
     background-color: #333;
     display: flex;
     justify-content: center;
     align-items: center;
-    
+
 }
 
 
@@ -99,7 +97,7 @@ header {
     justify-content: center;
     align-items: center;
     background-color: #1a1a1a;
-    box-shadow: 0 4px 12px rgba(0,0,0,0.6);
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.6);
 }
 
 .arrow {
@@ -112,15 +110,24 @@ header {
     cursor: pointer;
     transition: transform 0.2s, border-bottom-color 0.2s, filter 0.2s;
 }
+
 .arrow:hover {
     background-color: #555;
     transform: scale(1.05);
-    box-shadow: 0 5px 12px rgba(0,0,0,0.8);
+    box-shadow: 0 5px 12px rgba(0, 0, 0, 0.8);
 }
 
-#right { transform: rotate(90deg); }
-#down { transform: rotate(180deg); }
-#left { transform: rotate(-90deg); }
+#right {
+    transform: rotate(90deg);
+}
+
+#down {
+    transform: rotate(180deg);
+}
+
+#left {
+    transform: rotate(-90deg);
+}
 
 .updown {
     display: flex;
@@ -146,66 +153,122 @@ header {
 .btns button {
     width: 100px;
     height: 25px;
-    
+
     background-color: #222;
     border: 2px solid #fff;
     border-radius: 10px;
     color: #fff;
     font-weight: bold;
     cursor: pointer;
-    box-shadow: 0 3px 8px rgba(0,0,0,0.6);
+    box-shadow: 0 3px 8px rgba(0, 0, 0, 0.6);
 }
 
 .btns button:hover {
     background-color: #555;
     /* transform: scale(1.05); */
 
-    box-shadow: 0 5px 12px rgba(0,0,0,0.8);
+    box-shadow: 0 5px 12px rgba(0, 0, 0, 0.8);
 }
 
 
 .HUD-container {
     width: 450px;
+
     display: flex;
     justify-content: space-evenly;
-    
+
 }
-/* 
+
 .stat-container {
     width: 120px;
     height: 100px;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
-    background-color: #1a1a1a;
+    /* background-color: #1a1a1a;
     
     border-radius: 10px;
-    box-shadow: 0 4px 10px rgba(0,0,0,0.6);
-} */
-/* 
-.stat-container h3 {
+    box-shadow: 0 4px 10px rgba(0,0,0,0.6); */
+}
+
+h3 {
     font-size: medium;
     text-align: center;
 }
 
-.hp-bar, .nrj-bar {
+.hp-bar,
+.nrj-bar {
     width: 120px;
-    height: 20px;
+
     border: 1px solid #fff;
     border-radius: 10px;
-    background-color: #444;
+
+}
+
+.hp-bar {
+    background-color: green;
+    height: 20px;
+}
+
+.nrj-bar {
+    background-color: yellow;
+    height: 10px;
 }
 
 
 .items {
     width: 120px;
     height: 150px;
-    border: 1px solid #333;
+    border: 3px solid #444;
     border-radius: 10px;
     background-color: #1a1a1a;
-    box-shadow: 0 4px 10px rgba(0,0,0,0.6);
-} */
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.6);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
 
+}
+
+.items-align {
+    width: 115px;
+    height: 100px;
+    display: grid;
+    grid-template-columns: repeat(2, 50px);
+    justify-content: center;
+    align-items: center;
+}
+
+.item {
+    width: 50px;
+    height: 50px;
+    border: 3px solid #444;
+    border-radius: 10px;
+    background-size: 35px 35px;
+    background-repeat: no-repeat;
+    background-position: center;
+    display: none;
+}
+
+#cheese {
+    background-image: url("../img/du-fromage.png");
+    
+}
+
+#mush {
+    background-image: url("../img/champignon.png");
+    
+}
+
+#hammer {
+    background-image: url("../img/marteau-de-forgeron.png");
+    
+}
+
+#weed {
+    background-image: url("../img/herbe.png");
+    
+}
 
 .modale {
     position: fixed;
@@ -220,7 +283,7 @@ header {
     font-size: 24px;
     font-weight: bold;
     z-index: 20;
-    box-shadow: 0 0 20px rgba(255,255,255,0.8);
+    box-shadow: 0 0 20px rgba(255, 255, 255, 0.8);
 }
 
 
@@ -234,5 +297,5 @@ footer {
     justify-content: center;
     align-items: center;
     color: #fff;
-    box-shadow: 0 -4px 10px rgba(0,0,0,0.5);
+    box-shadow: 0 -4px 10px rgba(0, 0, 0, 0.5);
 }
